--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/format.css">
 	</head>
 
-	<body style="margin:0px">
+	<body style="margin:5px">
 		
 		<audio autoplay loop>
 			<source src="music/music.mp3" type="audio/mpeg">
@@ -17,7 +17,7 @@
 		<div id="imgTxt">
 			<span id="Txt"></span> <br />
 			<span id="tmp"></span>
-			<img id="img" src="./pic/love1.jpg">
+			<img id="img" src="./pic/jpg">
 		</div>
 		<div id="heartTxt">
 			<span id="clickMe">Click!</span>
@@ -27,15 +27,14 @@
 		</div>
 		<div id="content">
 			<h2 id="together">Happy Birthday Shweta🤞🎂</h2>
-			<p id="together"> 
-				I hope you have a great day & equally great year ahead<br>
+			<p id="together1"> <br>
+				<sub><i>I hope you have a great day & equally great year ahead<br>
 				may your year be filled with happiness, achievments & good health<br>
-				always be joyful & cheered up. you look beautiful when you smile<br><br>
+				always be joyful & cheered up. you look beautiful when you smile<br>
 				I've tried something, I hope you'll like it <br>
-				<br>
-				<br><br>
+				
 				 do you know?
-				you were born...
+				you were born...</i></sub>
 			</p>>
 			<div id="timer">
 				<b id="d"></b> Days ago!
