--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 				<sub><i>I hope you have a great day & equally great year ahead<br>
 				may your year be filled with happiness, achievments & good health<br>
 				always be joyful & cheered up. you look beautiful when you smile<br>
-				I've tried something, I hope you'll like it <br>
+				I've tried something, I hope you'll like it <br></i></sub>
 				
 				 do you know?
-				you were born...</i></sub>
+				you were born...
 			</p>>
 			<div id="timer">
 				<b id="d"></b> Days ago!
